--- a/humber-http-5226-collaborative-project.csproj
+++ b/humber-http-5226-collaborative-project.csproj
@@ -203,9 +203,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202404050124325_second.cs" />
-    <Compile Include="Migrations\202404050124325_second.designer.cs">
-      <DependentUpon>202404050124325_second.cs</DependentUpon>
+    <Compile Include="Migrations\202404060812434_initial_setup.cs" />
+    <Compile Include="Migrations\202404060812434_initial_setup.Designer.cs">
+      <DependentUpon>202404060812434_initial_setup.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -344,8 +344,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202404050124325_second.resx">
-      <DependentUpon>202404050124325_second.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202404060812434_initial_setup.resx">
+      <DependentUpon>202404060812434_initial_setup.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
